# rbroadlink

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  publish.yml
examples/: README.md  hvac-cli.rs  mqtt-broadlink.rs  rbroadlink-cli.rs
src/: constants.rs  device.rs  device_info.rs  hvac.rs  lib.rs  models.rs  remote.rs  test.rs
src/network/: authentication.rs  command.rs  data.rs  discovery.rs  hvac_data.rs  mod.rs  remote_data.rs  util.rs  wireless_connection.rs
src/traits/: command_trait.rs  device_trait.rs  mod.rs
