[package]
name = "rbroadlink"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A library to control broadlink smart devices."
homepage = "https://github.com/nicholascioli/rbroadlink"
repository = "https://github.com/nicholascioli/rbroadlink"
readme = "README.md"
authors = [
    "Nicholas Cioli <nicholascioli@gmail.com>",
    "Wyatt Lindquist <git.wquist@gmail.com>",
]

[lib]
name = "rbroadlink"
path = "src/lib.rs"

[[example]]
name = "rbroadlink-cli"

[[example]]
name = "mqtt-broadlink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
chrono = "0.4"
get_if_addrs = "0.5.3"
hex-literal = "0.3.4"
packed_struct = "0.10"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.4"

[dev-dependencies]
clap = { version = "3.0.0", features = ["derive"] }
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.14"
mqtt-async-client = "0.3.1"
rpassword = "5.0"
tokio = {version = "1.15.0", features = ["full"] }
