[package]
name = "rbroadlink"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A library to control broadlink smart devices."
homepage = "https://github.com/nicholascioli/rbroadlink"
repository = "https://github.com/nicholascioli/rbroadlink"
readme = "README.md"
authors = [
    "Nicholas Cioli <nicholascioli@users.noreply.github.com>",
    "Wyatt Lindquist <git.wquist@gmail.com>",
]

[lib]
name = "rbroadlink"
path = "src/lib.rs"

[[example]]
name = "rbroadlink-cli"
required-features = ["rbroadlink-cli"]

[[example]]
name = "mqtt-broadlink"
required-features = ["mqtt-broadlink"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
block-modes = "0.8.1"
chrono = "0.4"
get_if_addrs = "0.5.3"
hex-literal = "0.3.4"
packed_struct = "0.10"
phf = { version = "0.10", features = ["macros"] }
rand = "0.8.4"

# Dependencies for the examples
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4.14", optional = true }
mqtt-async-client = { version = "0.3.1", optional = true }
rpassword = { version = "5.0", optional = true }
tokio = { version = "1.15.0", features = ["full"], optional = true }

[dev-dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = { version = "0.4.3" }

[features]
rbroadlink-cli = ["rpassword"]
mqtt-broadlink = ["env_logger", "log", "mqtt-async-client", "tokio"]
